--- a/publications/index.html
+++ b/publications/index.html
@@ -138,6 +138,9 @@
                                     <a href="/publications/2016_brain.pdf"> Cerebellar Atrophy in Parkinson’s disease and its Implication for Network Connectivity (Brain) </a>
                                 </li>
                                 <li>
+                                    <a href="/publications/2016_neuroscientist.pdf"> The Next Step: A Common Neural Mechanism for Freezing of Gait (The Neuroscientist) </a>
+                                </li>
+                                <li>
                                     <a href="/publications/2016_sb.pdf"> Auditory Hallucinations and the Brain’s Resting-State Networks: Findings and Methodological Observations (Schizophrenia Bulletin) </a>
                                 </li>
                                 <li>
