--- a/publications/index.html
+++ b/publications/index.html
@@ -83,6 +83,16 @@
                                     <a href="/publications/2019_pnas.pdf"> Hippocampal Atrophy and Intrinsic Brain Network Dysfunction Relate to Alterations in Mind Wandering in Neurodegeneration (PNAS) </a>
                                 </li>                                
                             </ul>
+                            <ul>
+                                <li>
+                                    <a href="/publications/2019_brain2.pdf"> Cognitive fluctuations in Lewy body dementia: towards a pathophysiological framework (Brain) </a>
+                                </li>                                
+                            </ul>
+                            <ul>
+                                <li>
+                                    <a href="/publications/2019_ploscb.pdf"> Transitions in information processing dynamics at the whole-brain network level are driven by alterations in neural gain (PLoS CB) </a>
+                                </li>                                
+                            </ul>
                         </li>
                         <li>2018:
                             <ul>
