--- a/publications/index.html
+++ b/publications/index.html
@@ -98,6 +98,11 @@
                                     <a href="/publications/2019_ploscb.pdf"> Transitions in information processing dynamics at the whole-brain network level are driven by alterations in neural gain (PLoS CB) </a>
                                 </li>                                
                             </ul>
+                            <ul>
+                                <li>
+                                    <a href="/publications/2019_brain3.pdf"> Hitting the brakes: pathological subthalamic nucleus activity in Parkinson’s disease gait freezing (Brain) </a>
+                                </li>                                
+                            </ul>
                         </li>
                         <li>2018:
                             <ul>
