--- a/publications/index.html
+++ b/publications/index.html
@@ -62,6 +62,13 @@
                 <div class="row">
                     <div class="col-md-12 col-lg-12" style="margin-left:50px">
                         <ul>
+                        <li>2020:                            
+                            <ul>
+                                <li>
+                                    <a href="/publications/2020_nimg.pdf"> Core and matrix thalamic sub-populations relate to spatio-temporal cortical connectivity gradients (NeuroImage) </a>
+                                </li>                                
+                            </ul>
+                        </li>
                         <li>2019:
                             <ul>
                                 <li>
