--- a/publications/index.html
+++ b/publications/index.html
@@ -65,7 +65,7 @@
                         <li>2020:                            
                             <ul>
                                 <li>
-                                    <a href="/publications/2020_nimg.pdf"> Core and matrix thalamic sub-populations relate to spatio-temporal cortical connectivity gradients (NeuroImage) </a>
+                                    <a href="/publications/2020_nimg.pdf"> Core and Matrix Thalamic Sub-populations Relate to Spatio-temporal Cortical Connectivity Gradients (NeuroImage) </a>
                                 </li>                                
                             </ul>
                         </li>
