--- a/publications/index.html
+++ b/publications/index.html
@@ -68,6 +68,26 @@
                                     <a href="/publications/2020_nimg.pdf"> Core and Matrix Thalamic Sub-populations Relate to Spatio-temporal Cortical Connectivity Gradients (NeuroImage) </a>
                                 </li>                                
                             </ul>
+                            <ul>
+                                <li>
+                                    <a href="/publications/2020_netneuro.pdf"> Questions and Controversies in the Study of Rime-varying Functional Connectivity in Resting fMRI (Network Neuroscience) </a>
+                                </li>                                
+                            </ul>
+                            <ul>
+                                <li>
+                                    <a href="/publications/2020_brain.pdf"> Shaking with Fear: The Role of Noradrenaline in Modulating Resting Tremor (Brain) </a>
+                                </li>                                
+                            </ul>
+                            <ul>
+                                <li>
+                                    <a href="/publications/2020_cercor.pdf"> Mind-wandering in Parkinson's disease hallucinations reflects primary visual and default network coupling (Cerebral Cortex) </a>
+                                </li>                                
+                            </ul>
+                            <ul>
+                                <li>
+                                    <a href="/publications/2020_movdisord.pdf"> Dopamine and Functional Connectivity in Patients With Parkinson’s Disease and Visual Hallucinations (Movement Disorders) </a>
+                                </li>                                
+                            </ul>
                         </li>
                         <li>2019:
                             <ul>
