--- a/publications/index.html
+++ b/publications/index.html
@@ -80,7 +80,7 @@
                             </ul>
                             <ul>
                                 <li>
-                                    <a href="/publications/2020_cercor.pdf"> Mind-wandering in Parkinson's disease hallucinations reflects primary visual and default network coupling (Cerebral Cortex) </a>
+                                    <a href="/publications/2020_cercor.pdf"> Mind-wandering in Parkinson's Disease Hallucinations Reflects Primary Visual and Default Network Coupling (Cerebral Cortex) </a>
                                 </li>                                
                             </ul>
                             <ul>
