--- a/publications/index.html
+++ b/publications/index.html
@@ -88,6 +88,11 @@
                                     <a href="/publications/2020_movdisord.pdf"> Dopamine and Functional Connectivity in Patients With Parkinson’s Disease and Visual Hallucinations (Movement Disorders) </a>
                                 </li>                                
                             </ul>
+                            <ul>
+                                <li>
+                                    <a href="/publications/2020_netneuro2.pdf"> Reducing the Influence of Intramodularconnectivity in Participation Coefficient (Network Neuroscience) </a>
+                                </li>                                
+                            </ul>
                         </li>
                         <li>2019:
                             <ul>
