--- a/publications/index.html
+++ b/publications/index.html
@@ -93,6 +93,11 @@
                                     <a href="/publications/2020_netneuro2.pdf"> Reducing the Influence of Intramodularconnectivity in Participation Coefficient (Network Neuroscience) </a>
                                 </li>                                
                             </ul>
+                            <ul>
+                                <li>
+                                    <a href="/publications/2020_frontiers.pdf"> Topological Properties of Neuromorphic Nanowire Networks (Frontiers in Neuroscience) </a>
+                                </li>                                
+                            </ul>
                         </li>
                         <li>2019:
                             <ul>
