--- a/publications/index.html
+++ b/publications/index.html
@@ -65,6 +65,11 @@
                         <li>2020:                            
                             <ul>
                                 <li>
+                                    <a href="/publications/2020_progneuro.pdf"> The Thalamus Integrates the Macrosystems of the Brain to Facilitate Complex, Adaptive Brain Network Dynamics  (Progress in Neurobiology) </a>
+                                </li>                                
+                            </ul>
+                            <ul>
+                                <li>
                                     <a href="/publications/2020_nimg.pdf"> Core and Matrix Thalamic Sub-populations Relate to Spatio-temporal Cortical Connectivity Gradients (NeuroImage) </a>
                                 </li>                                
                             </ul>
