--- a/publications/index.html
+++ b/publications/index.html
@@ -75,6 +75,11 @@
                             </ul>
                             <ul>
                                 <li>
+                                    <a href="/publications/2020_philtrans.pdf"> Neuromodulation of the mind-wandering brain state: the interaction between neuromodulatory tone, sharp waveripples and spontaneous thought  (Phil Trans B) </a>
+                                </li>                                
+                            </ul>
+                            <ul>
+                                <li>
                                     <a href="/publications/2020_netneuro.pdf"> Questions and Controversies in the Study of Rime-varying Functional Connectivity in Resting fMRI (Network Neuroscience) </a>
                                 </li>                                
                             </ul>
