--- a/publications/index.html
+++ b/publications/index.html
@@ -75,7 +75,7 @@
                             </ul>
                             <ul>
                                 <li>
-                                    <a href="/publications/2020_philtrans.pdf"> Neuromodulation of the mind-wandering brain state: the interaction between neuromodulatory tone, sharp waveripples and spontaneous thought  (Phil Trans B) </a>
+                                    <a href="/publications/2020_philtrans.pdf"> Neuromodulation of the Mind-Wandering Brain State: The Interaction Between Neuromodulatory Tone, Sharp Wave Ripples and Spontaneous Thought  (Phil Trans B) </a>
                                 </li>                                
                             </ul>
                             <ul>
