--- a/publications/index.html
+++ b/publications/index.html
@@ -67,43 +67,30 @@
                                 <li>
                                     <a href="/publications/2020_progneuro.pdf"> The Thalamus Integrates the Macrosystems of the Brain to Facilitate Complex, Adaptive Brain Network Dynamics  (Progress in Neurobiology) </a>
                                 </li>                                
-                            </ul>
-                            <ul>
+                                <li>
+                                    <a href="/publications/2020_naturecomms.pdf"> Diffuse Neural Coupling Mediates Complex Network Dynamics Through the Formation of Quasi-Critical Brain States (Nature Communications) </a>
+                                </li>                                
                                 <li>
                                     <a href="/publications/2020_nimg.pdf"> Core and Matrix Thalamic Sub-populations Relate to Spatio-temporal Cortical Connectivity Gradients (NeuroImage) </a>
                                 </li>                                
-                            </ul>
-                            <ul>
                                 <li>
                                     <a href="/publications/2020_philtrans.pdf"> Neuromodulation of the Mind-Wandering Brain State: The Interaction Between Neuromodulatory Tone, Sharp Wave Ripples and Spontaneous Thought  (Phil Trans B) </a>
                                 </li>                                
-                            </ul>
-                            <ul>
                                 <li>
                                     <a href="/publications/2020_netneuro.pdf"> Questions and Controversies in the Study of Rime-varying Functional Connectivity in Resting fMRI (Network Neuroscience) </a>
                                 </li>                                
-                            </ul>
-                            <ul>
                                 <li>
                                     <a href="/publications/2020_brain.pdf"> Shaking with Fear: The Role of Noradrenaline in Modulating Resting Tremor (Brain) </a>
                                 </li>                                
-                            </ul>
-                            <ul>
                                 <li>
                                     <a href="/publications/2020_cercor.pdf"> Mind-wandering in Parkinson's Disease Hallucinations Reflects Primary Visual and Default Network Coupling (Cerebral Cortex) </a>
                                 </li>                                
-                            </ul>
-                            <ul>
                                 <li>
                                     <a href="/publications/2020_movdisord.pdf"> Dopamine and Functional Connectivity in Patients With Parkinson’s Disease and Visual Hallucinations (Movement Disorders) </a>
                                 </li>                                
-                            </ul>
-                            <ul>
                                 <li>
                                     <a href="/publications/2020_netneuro2.pdf"> Reducing the Influence of Intramodularconnectivity in Participation Coefficient (Network Neuroscience) </a>
                                 </li>                                
-                            </ul>
-                            <ul>
                                 <li>
                                     <a href="/publications/2020_frontiers.pdf"> Topological Properties of Neuromorphic Nanowire Networks (Frontiers in Neuroscience) </a>
                                 </li>                                
@@ -114,38 +101,24 @@
                                 <li>
                                     <a href="/publications/2019_natureneuro.pdf"> Human Cognition Involves the Dynamic Integration of Neural Activity and Neuromodulatory Systems (Nature Neuroscience) </a>
                                 </li>                                
-                            </ul>
-                            <ul>
                                 <li>
                                     <a href="/publications/2019_neuron.pdf"> The Low-Dimensional Neural Architecture of Cognitive Complexity is Related to Activity in the Medial Thalamic Nuclei (Neuron) </a>
                                 </li>                                
-                            </ul>
-                            <ul>
                                 <li>
                                     <a href="/publications/2019_tics.pdf"> Neuromodulatory Influences on Integration and Segregation in the Brain (Trends in Cognitive Sciences) </a>
                                 </li>                                
-                            </ul>
-                            <ul>
                                 <li>
                                     <a href="/publications/2019_brain.pdf"> Dopamine Depletion Alters Macroscopic Network Dynamics in Parkinson’s disease (Brain) </a>
                                 </li>                                
-                            </ul>
-                            <ul>
                                 <li>
                                     <a href="/publications/2019_pnas.pdf"> Hippocampal Atrophy and Intrinsic Brain Network Dysfunction Relate to Alterations in Mind Wandering in Neurodegeneration (PNAS) </a>
                                 </li>                                
-                            </ul>
-                            <ul>
                                 <li>
                                     <a href="/publications/2019_brain2.pdf"> Cognitive fluctuations in Lewy body dementia: towards a pathophysiological framework (Brain) </a>
                                 </li>                                
-                            </ul>
-                            <ul>
                                 <li>
                                     <a href="/publications/2019_ploscb.pdf"> Transitions in information processing dynamics at the whole-brain network level are driven by alterations in neural gain (PLoS CB) </a>
                                 </li>                                
-                            </ul>
-                            <ul>
                                 <li>
                                     <a href="/publications/2019_brain3.pdf"> Hitting the brakes: pathological subthalamic nucleus activity in Parkinson’s disease gait freezing (Brain) </a>
                                 </li>                                
@@ -156,23 +129,15 @@
                                 <li>
                                     <a href="/publications/2018_elife.pdf"> The Modulation of Neural Gain Facilitates a Transition Between Functional Segregation and Integration in the Brain (eLife) </a>
                                 </li>                                
-                            </ul>
-                            <ul>
                                 <li>
                                     <a href="/publications/2018_netneuro.pdf"> Catecholaminergic Manipulation Alters Dynamic Network Topology Across Cognitive States (Network Neuroscience) </a>
                                 </li>                                
-                            </ul>
-                            <ul>
                                 <li>
                                     <a href="/publications/2018_tins.pdf"> Understanding the Brain, By Default (Trends in Neurosciences) </a>
                                 </li>                                
-                            </ul>
-                            <ul>
                                 <li>
                                     <a href="/publications/2018_brain.pdf"> The Functional Network Signature of Heterogeneity in Freezing of Gait (Brain) </a>
                                 </li>                                
-                            </ul>
-                            <ul>
                                 <li>
                                     <a href="/publications/2018_cc.pdf"> Frontoparietal Activity Interacts With Task-Evoked Changes in Functional Connectivity (Cerebral Cortex) </a>
                                 </li>                                
