--- a/publications/index.html
+++ b/publications/index.html
@@ -62,7 +62,17 @@
                 <div class="row">
                     <div class="col-md-12 col-lg-12" style="margin-left:50px">
                         <ul>
-                        <li>2020:                            
+                        <li>2021:                            
+                            <ul>
+                                <li>
+                                    <a href="/publications/2021_natureneuro.pdf"> Computational Models Link Cellular Mechanisms of Neuromodulation to Large-scale Neural Dynamics  (Nature Neuroscience) </a>
+                                </li>                                
+                                <li>
+                                    <a href="/publications/2021_neuron.pdf"> Brainhack: Developing a Culture of Open, Inclusive, Community-driven Neuroscience (Neuron) </a>
+                                </li>                             
+                            </ul>
+                        </li>
+                            <li>2020:                            
                             <ul>
                                 <li>
                                     <a href="/publications/2020_progneuro.pdf"> The Thalamus Integrates the Macrosystems of the Brain to Facilitate Complex, Adaptive Brain Network Dynamics  (Progress in Neurobiology) </a>
