--- a/publications/index.html
+++ b/publications/index.html
@@ -65,7 +65,7 @@
                         <li>2021:                            
                             <ul>
                                 <li>
-                                    <a href="/publications/2021_natureneuro.pdf"> Computational Models Link Cellular Mechanisms of Neuromodulation to Large-scale Neural Dynamics  (Nature Neuroscience) </a>
+                                    <a href="/publications/2021_natureneuro.pdf"> Computational Models Link Cellular Mechanisms of Neuromodulation to Large-scale Neural Dynamics (Nature Neuroscience) </a>
                                 </li>                                
                                 <li>
                                     <a href="/publications/2021_neuron.pdf"> Brainhack: Developing a Culture of Open, Inclusive, Community-driven Neuroscience (Neuron) </a>
@@ -75,7 +75,7 @@
                             <li>2020:                            
                             <ul>
                                 <li>
-                                    <a href="/publications/2020_progneuro.pdf"> The Thalamus Integrates the Macrosystems of the Brain to Facilitate Complex, Adaptive Brain Network Dynamics  (Progress in Neurobiology) </a>
+                                    <a href="/publications/2020_progneuro.pdf"> The Thalamus Integrates the Macrosystems of the Brain to Facilitate Complex, Adaptive Brain Network Dynamics (Progress in Neurobiology) </a>
                                 </li>                                
                                 <li>
                                     <a href="/publications/2020_naturecomms.pdf"> Diffuse Neural Coupling Mediates Complex Network Dynamics Through the Formation of Quasi-Critical Brain States (Nature Communications) </a>
@@ -99,7 +99,7 @@
                                     <a href="/publications/2020_movdisord.pdf"> Dopamine and Functional Connectivity in Patients With Parkinson’s Disease and Visual Hallucinations (Movement Disorders) </a>
                                 </li>                                
                                 <li>
-                                    <a href="/publications/2020_netneuro2.pdf"> Reducing the Influence of Intramodularconnectivity in Participation Coefficient (Network Neuroscience) </a>
+                                    <a href="/publications/2020_netneuro2.pdf"> Reducing the Influence of Intra-modular Connectivity in Participation Coefficient (Network Neuroscience) </a>
                                 </li>                                
                                 <li>
                                     <a href="/publications/2020_frontiers.pdf"> Topological Properties of Neuromorphic Nanowire Networks (Frontiers in Neuroscience) </a>
@@ -124,13 +124,13 @@
                                     <a href="/publications/2019_pnas.pdf"> Hippocampal Atrophy and Intrinsic Brain Network Dysfunction Relate to Alterations in Mind Wandering in Neurodegeneration (PNAS) </a>
                                 </li>                                
                                 <li>
-                                    <a href="/publications/2019_brain2.pdf"> Cognitive fluctuations in Lewy body dementia: towards a pathophysiological framework (Brain) </a>
+                                    <a href="/publications/2019_brain2.pdf"> Cognitive Fluctuations in Lewy Body Dementia: Towards a Pathophysiological Framework (Brain) </a>
                                 </li>                                
                                 <li>
-                                    <a href="/publications/2019_ploscb.pdf"> Transitions in information processing dynamics at the whole-brain network level are driven by alterations in neural gain (PLoS CB) </a>
+                                    <a href="/publications/2019_ploscb.pdf"> Transitions in Information Processing Dynamics at the Whole-brain Network Level are Driven by Alterations in Neural Gain (PLoS CB) </a>
                                 </li>                                
                                 <li>
-                                    <a href="/publications/2019_brain3.pdf"> Hitting the brakes: pathological subthalamic nucleus activity in Parkinson’s disease gait freezing (Brain) </a>
+                                    <a href="/publications/2019_brain3.pdf"> Hitting the Brakes: Pathological Subthalamic Nucleus Activity in Parkinson’s Disease Gait Freezing (Brain) </a>
                                 </li>                                
                             </ul>
                         </li>
@@ -209,7 +209,7 @@
                                     <a href="/publications/2015_royal.pdf"> Imagine That: Elevated Sensory Strength of Mental Imagery in Individuals with Parkinson’s disease and Visual Hallucinations (Royal Society B)</a>
                                 </li>
                                 <li>
-                                    <a href="/publications/2015_hbm.pdf"> Dopaminergic Basis for Impairments in Functional Connectivity Across Subdivisions of the Striatum in Parkinson’s disease (Human Brain Mapping)</a>
+                                    <a href="/publications/2015_hbm.pdf"> Dopaminergic Basis for Impairments in Functional Connectivity Across Subdivisions of the Striatum in Parkinson’s Disease (Human Brain Mapping)</a>
                                 </li>
                                 <li>
                                     <a href="/publications/2015_natcomms.pdf"> Long-term Neural and Physiological Phenotyping of a Single Human (Nature Communications)</a>
@@ -233,16 +233,16 @@
                         <li>2013:
                             <ul>
                                 <li>
-                                    <a href="/publications/2013_brain1.pdf"> Exploring the Cortical and Subcortical fMRI Changes Associated with Freezing in Parkinson's disease (Brain)</a>
+                                    <a href="/publications/2013_brain1.pdf"> Exploring the Cortical and Subcortical fMRI Changes Associated with Freezing in Parkinson's Disease (Brain)</a>
                                 </li>
                                 <li>
-                                    <a href="/publications/2013_brain2.pdf"> Freezing of Gait in Parkinson’s disease is Associated with Functional Decoupling Between the Cognitive Control Network and the Basal Ganglia (Brain)</a>
+                                    <a href="/publications/2013_brain2.pdf"> Freezing of Gait in Parkinson’s Disease is Associated with Functional Decoupling Between the Cognitive Control Network and the Basal Ganglia (Brain)</a>
                                 </li>
                                 <li>
-                                    <a href="/publications/2013_frontiers.pdf"> The Role of Frontostriatal Impairment in Freezing of Gait in Parkinson’s disease (Frontiers in Systems Neuroscience)</a>
+                                    <a href="/publications/2013_frontiers.pdf"> The Role of Frontostriatal Impairment in Freezing of Gait in Parkinson’s Disease (Frontiers in Systems Neuroscience)</a>
                                 </li>
                                 <li>
-                                    <a href="/publications/2013_hbm.pdf"> The Role of Dysfunctional Attentional Control Networks in Visual Misperceptions in Parkinson’s disease (Human Brain Mapping)</a>
+                                    <a href="/publications/2013_hbm.pdf"> The Role of Dysfunctional Attentional Control Networks in Visual Misperceptions in Parkinson’s Disease (Human Brain Mapping)</a>
                                 </li>
                             </ul>
                         </li>
