--- a/index.html
+++ b/index.html
@@ -64,13 +64,11 @@
                     </div>
                     <div class="col-md-8" style="margin-top:20px">
                         <h1 class="intro"><span></span> <span></span> Mac Shine<span> </h1>
-                            <p style="font-size:16px">I am a theoretical neuroscientist working to understand the mechanisms of cognition and attention using functional brain imaging, both in health and disease.
-				    
-				    I am currently working as a Robinson/SOAR fellow at The University of Sydney to understand the factors that drive the network-level reorganization of the human brain.
+                            <p style="font-size:16px">I am a systems neurobiologist working to understand the mechanisms of cognition and attention using functional brain imaging, both in health and disease. I have a particular interest in understanding how the different arms of the ascending arousal system flexibly modulate the cross-scale organisation of the brain to facilitate adaptive behaviour.
 				 
-				    I completed my post-doc with Russell Poldrack at Stanford University, received my PhD from Sydney University in 2013 (PI: Simon JG Lewis), my MBBS from Sydney University in 2007 and my BSc from the University of Sydney in 2003.
+				    I completed my bachelor's (2003), medical degree and PhD (2013) at the University of Sydney (2007) and was an NHMRC CJ Martin fellow with Russell Poldrack at Stanford University (2016).  I am currently working as a Robinson fellow at The University of Sydney, where I run an inter-disciplinary lab that aims to integrate neuroscience, evolutionary theory and complex systems to understand how neurobiology supports awareness and flexible, parallel behaviour.
 
-                                    Contact me via email me at mac dot shine at sydney dot edu dot au or on Twitter @jmacshine</p>
+                                    My lab is always growing, and I'm always keen to hear from passionate students. Feel free to contact me via email me at mac dot shine at sydney dot edu dot au or on Twitter @jmacshine</p>
 
                     </div>
                         </div>
