--- a/publications/index.html
+++ b/publications/index.html
@@ -66,7 +66,10 @@
                             <ul>
                                 <li>
                                     <a href="/publications/2021_natureneuro.pdf"> Computational Models Link Cellular Mechanisms of Neuromodulation to Large-scale Neural Dynamics (Nature Neuroscience) </a>
-                                </li>                                
+                                </li>
+                                <li>
+                                    <a href="/publications/2021_nimg.pdf"> Brain state kinematics and the trajectory of task performance improvement (NeuroImage) </a>
+                                </li> 
                                 <li>
                                     <a href="/publications/2021_neuron.pdf"> Brainhack: Developing a Culture of Open, Inclusive, Community-driven Neuroscience (Neuron) </a>
                                 </li>                             
